<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_filter</name>
  <version>0.0.0</version>
  <description>Basic bounding box point filter for rplidar and unitree lidar devices</description>
  <maintainer email="bradyward@u.boisestate.edu">brady</maintainer>
  <license>TODO: License declaration</license>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>numpy</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>kurome</exec_depend>
  </export>
</package>
