<?xml version="1.0"?>
<package format="3">
  <name>ros_rplidar_wall_filter</name>
  <version>0.1.0</version>
  <description>Filters LiDAR points outside a 2D global bounding box using transforms.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kurome</depend> <!-- Assuming this is in your workspace -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

